feat: complete Epic 01 — inventory CRUD, sale management, alert display, and frontend architecture alignment
Backend:
- ProductService/InventoryService/PricingService: full CRUD, store-scoped sale toggle, stock receive/adjust, soft archive
- MapStruct mappers for Product, Inventory, ProductInventory DTOs
- StoreService + StoreNotFoundException for cross-store validation
- GlobalExceptionHandler for consistent error responses
- Controllers: Product, Inventory, Store endpoints aligned with OpenAPI spec
- Flyway migrations for schema (stores, products, inventory, transactions, suppliers)

Frontend architecture alignment:
- Replace DevModeProvider context+useEffect with Zustand persisted store (stores/dev-mode.ts)
- Remove all direct useEffect usage; form reset now uses key-based remount strategy
- Switch from BrowserRouter+Routes to createBrowserRouter data-router (router.tsx)
- Add strict Zod validation at API fetch boundary (api/products.ts)
- Add openapi-typescript codegen pipeline (npm run codegen:api, output to .generated/)
- Extract shared product alert logic to lib/product-alert.ts
- Normalize border radius and theme token usage across product pages
- Consolidate productDetail + productForm into productPage + editProductPage

Epic 01 stories complete:
- EPIC-01-01: Add product with initial inventory creation
- EPIC-01-02: Soft archive with confirmation dialog
- EPIC-01-03: Auto-refresh via TanStack Query invalidation
- EPIC-01-04: Store-scoped sale apply/remove with manager toggle